  * Accept bytes object for file names (Closes: #680971)
  * aptsources/sourceslist.py
    - Document correct use of uniq and hide it using __all__ (Closes: #723815)
  * python/apt_pkgmodule.cc:
    - Fix documentation of version_compare (Closes: #680891)
  * apt/package.py:
    - Add a Package.has_config_files property (Closes: #712749)
  * tests:
    - Do not set dir::etc::sourceparts to /tmp

  [ Jeremy Bicha ]
  * data/templates/Ubuntu.info.in: add 'devel' series (Closes: #722961)

  [ Jakub Wilk ]
  * python-apt: formatting error in library/index.rst (Closes: #692484)

  [ Daniel Hartwig ]
  * apt/package.py:
    - mark_upgrade misuses FromUser to set auto-installed (Closes: #686726)

 -- Michael Vogt <mvo@debian.org>  Mon, 05 Aug 2013 22:55:02 +0200

python-apt (0.8.9.1) unstable; urgency=low

  [ Michael Vogt ]
  * debian/control:
    - updated Vcs field to point to 
      http://git.debian.org/git/apt/python-apt.git
  * replace .bzr-builddeb/default.conf with debian/gbp.conf

  [ Julian Andres Klode ]
  * Update the Vcs fields to use Vcs-Git with git protocol, and gitweb
    for Vcs-Browser
  
  [ Colin Watson ]
  * add support for "key in apt.debfile.DebPackage" (closes: #710541)

 -- Michael Vogt <mvo@debian.org>  Thu, 06 Jun 2013 18:32:14 +0200

python-apt (0.8.9) unstable; urgency=low

  * upload previous experimental upload to sid

 -- Michael Vogt <mvo@debian.org>  Wed, 08 May 2013 18:23:36 +0200

python-apt (0.8.9~exp2) experimental; urgency=low

  * apt/package.py:
    - export codename in apt.package.Origin as well
      (closes: #703401)

 -- Michael Vogt <mvo@debian.org>  Tue, 19 Mar 2013 16:57:40 +0100

python-apt (0.8.9~exp1) experimental; urgency=low

  [ Michael Vogt ]
  * python/tag.cc:
    - make TagSecString_FromStringAndSize, TagSecString_FromString
      static, thanks to jcristau
  * python/cache.cc:
    - add "Codename" to PackageFile object
  * add dep8 style autopkgtest support
  * build fixes for python3.3