@@ -1,4 +1,7 @@
 import apt_pkg
 
-# init the package system
-apt_pkg.init()
+
+# init the package system, but do not re-initialize config
+if "APT" not in apt_pkg.config:
+    apt_pkg.init_config()
+apt_pkg.init_system()
